Informationen aus Der Datenabfrage rudimentrö in die Oberfläche eingebaut

--- a/src/pages/page1/page1.html
+++ b/src/pages/page1/page1.html
@@ -21,6 +21,14 @@
   </p>
 
   <ion-list>
-
+    <ion-card *ngFor="let wifiLocation of wifiLocations">
+      <ion-card-content>
+        <ion-card-title>Freier Wifi Hotspot</ion-card-title>
+        <p>
+          Lat.: {{wifiLocation.location.lat}}<br />
+          Lng.: {{wifiLocation.location.lng}}
+        </p>
+      </ion-card-content>
+    </ion-card>
   </ion-list>
 </ion-content>
