Hinweistext verschwindet wenn eine Geolocation gefunden wurde

--- a/src/pages/page1/page1.html
+++ b/src/pages/page1/page1.html
@@ -16,7 +16,7 @@
 <ion-content padding>
   <p>Die nächsten Stuttgarter Wifi Spots in deiner Nähe sind...</p>
 
-  <p *ngIf="unknownLocation">
+  <p *ngIf="!location">
     Dein Standort ist nicht bekannt, sorry!
   </p>
 
