Darstellung der WifiLocations vereinfacht und Datenzugriff über eigene Pipe

--- a/src/pages/page1/page1.html
+++ b/src/pages/page1/page1.html
@@ -21,13 +21,9 @@
   </p>
 
   <ion-list>
-    <ion-card *ngFor="let wifiLocation of wifiLocations">
+    <ion-card *ngFor="let wifiLocation of wifiLocations | values">
       <ion-card-content>
-        <ion-card-title>Freier Wifi Hotspot</ion-card-title>
-        <p>
-          Lat.: {{wifiLocation.location.lat}}<br />
-          Lng.: {{wifiLocation.location.lng}}
-        </p>
+        <ion-card-title>{{wifiLocation.details.name}}</ion-card-title>
       </ion-card-content>
     </ion-card>
   </ion-list>
