--- a/src/pages/page1/page1.html
+++ b/src/pages/page1/page1.html
@@ -3,18 +3,16 @@
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>Wifi in deiner Nähe</ion-title>
-
-    <ion-buttons margin-right end>
-      <button ion-button (click)="retrieveLocation()">
-        <ion-icon name="locate"></ion-icon>
-      </button>
-    </ion-buttons>
+    <ion-title>Wifis in deiner Nähe...</ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  <p>Die nächsten Stuttgarter Wifi Spots in deiner Nähe sind...</p>
+  <ion-row>
+    <ion-col center text-center>
+      <ion-icon name="locate" style="font-size: 45pt;" (click)="retrieveLocation()"></ion-icon>
+    </ion-col>
+  </ion-row>
 
   <p *ngIf="!location">
     Dein Standort ist nicht bekannt, sorry!
